// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Refactoring regression tests - series coloredarea. Graphs element tests. The graphs paths should match the snapshot. 1`] = `
[
  "<path fill="red" d="M 0 0" stroke="red" stroke-width="2" data-z-index="1" stroke-linejoin="round" stroke-linecap="round" filter="none"></path>",
  "<path fill="blue" d="M 0 0" stroke="blue" stroke-width="2" data-z-index="1" stroke-linejoin="round" stroke-linecap="round" filter="none"></path>",
  "<path fill="yellow" d="M 0 0" stroke="yellow" stroke-width="2" data-z-index="1" stroke-linejoin="round" stroke-linecap="round" filter="none"></path>",
  "<path fill="green" d="M 0 0" stroke="green" stroke-width="2" data-z-index="1" stroke-linejoin="round" stroke-linecap="round" filter="none"></path>",
  "<path fill="brown" d="M 0 0" stroke="brown" stroke-width="2" data-z-index="1" stroke-linejoin="round" stroke-linecap="round" filter="none"></path>",
]
`;

exports[`Refactoring regression tests - series coloredarea. The segments data should match the snapshot. 1`] = `
[
  {
    "color": "red",
    "points": [
      {
        "segmentColor": "red",
        "x": 0,
        "y": 40,
      },
      {
        "segmentColor": "blue",
        "x": 1,
        "y": 60,
      },
    ],
  },
  {
    "color": "blue",
    "points": [
      {
        "segmentColor": "blue",
        "x": 1,
        "y": 60,
      },
      {
        "segmentColor": "yellow",
        "x": 2,
        "y": 30,
      },
    ],
  },
  {
    "color": "yellow",
    "points": [
      {
        "segmentColor": "yellow",
        "x": 2,
        "y": 30,
      },
      {
        "segmentColor": "green",
        "x": 3,
        "y": 10,
      },
    ],
  },
  {
    "color": "green",
    "points": [
      {
        "segmentColor": "green",
        "x": 3,
        "y": 10,
      },
      {
        "segmentColor": "green",
        "x": 4,
        "y": 50,
      },
      {
        "segmentColor": "brown",
        "x": 5,
        "y": 20,
      },
    ],
  },
  {
    "color": "brown",
    "points": [
      {
        "segmentColor": "brown",
        "x": 5,
        "y": 20,
      },
      {
        "segmentColor": "pink",
        "x": 6,
        "y": 70,
      },
    ],
  },
]
`;

exports[`Refactoring regression tests - series coloredarea. The series data should match the snapshot. 1`] = `
{
  "data": [
    {
      "segmentColor": "red",
      "x": 0,
      "y": 40,
    },
    {
      "segmentColor": "blue",
      "x": 1,
      "y": 60,
    },
    {
      "segmentColor": "yellow",
      "x": 2,
      "y": 30,
    },
    {
      "segmentColor": "green",
      "x": 3,
      "y": 10,
    },
    {
      "segmentColor": "green",
      "x": 4,
      "y": 50,
    },
    {
      "segmentColor": "brown",
      "x": 5,
      "y": 20,
    },
    {
      "segmentColor": "pink",
      "x": 6,
      "y": 70,
    },
  ],
  "seriesType": "coloredarea",
}
`;

exports[`Refactoring regression tests - series coloredarea. The tracker element should match the snapshot. 1`] = `
<path
  class="highcharts-tracker"
  d="M 0 0"
  data-z-index="2"
  fill="none"
  stroke="rgba(192,192,192,0.002)"
  stroke-linejoin="round"
  stroke-width="2"
  visibility="visible"
/>
`;
